--- a/_posts/2020-08-30-1.md
+++ b/_posts/2020-08-30-1.md
@@ -2,8 +2,6 @@
 actor_ids:
   - morazumorazu
   - ark_B
-audio_file_path: /audio/Ep001.mp3
-audio_file_size: 115.1 MB
 date: 2020-8-30 00:00:00 +0900
 description: モラズさんとモラズbot、モラズの近況、このポッドキャストについて話しました。
 duration: "00:00"
@@ -11,7 +9,9 @@ layout: article
 title: Ep. 1 A woman of strange age, Morazu
 ---
 
-## ShowNote
+<iframe src="https://anchor.fm/arkbfm/embed" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+
+## ShowNotes
 
 ### 0:00 モラズbot
 
