--- a/_posts/2020-08-30-1.md
+++ b/_posts/2020-08-30-1.md
@@ -2,8 +2,11 @@
 actor_ids:
   - morazumorazu
   - ark_B
+audio_file_path: 
+audio_file_size: 
 date: 2020-8-30 00:00:00 +0900
 description: モラズさんとモラズbot、モラズの近況、このポッドキャストについて話しました。
+duration: 
 layout: article
 title: Ep. 1 A woman of strange age, Morazu
 ---
