--- a/_posts/2020-11-14-7.md
+++ b/_posts/2020-11-14-7.md
@@ -7,11 +7,12 @@ audio_file_size: 138.3MB
 date: 2020-11-14 00:00:00 +0900
 description: かつこさんと育児と仕事、天気予報、保育園探し、デジタルアンプ、ツルヤのなめ茸などについて話しました。
 duration: "00:00"
+audio_url: Ep--7-Second-Pub-emffje
 layout: article
 title: Ep. 7 Second Pub
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 1:42 かつこさんとは
 
