--- a/_posts/2020-12-20-10.md
+++ b/_posts/2020-12-20-10.md
@@ -8,11 +8,12 @@ audio_file_size: 136.5MB
 date: 2020-12-20 00:00:00 +0900
 description: きゅうさん、ぐーつーさんとダイエット、訪れた国、コンテンツ、ボ便りなどについて話しました。
 duration: "00:00"
+audio_url: Ep--10-go_o2-Travel-eo0qsk
 layout: article
 title: Ep. 10 go_o2 Travel
 ---
 
-## ShowNote 
+## ShowNotes 
 
 ### 0:50 自己紹介、ダイエット、訪れた国、コンテンツ
 
