--- a/_posts/2021-01-24-11.md
+++ b/_posts/2021-01-24-11.md
@@ -7,11 +7,12 @@ audio_file_size: 136.2MB
 date: 2021-1-24 00:00:00 +0900
 description: もぐたんとスプラトゥーン2、じゆうちょうアドベントカレンダー、ドイツ語習得などについて話しました。
 duration: "00:00"
+audio_url: Ep--11-German-cake-with-a-fork-epctrj
 layout: article
 title: Ep. 11 German cake with a fork
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 3:29 自己紹介、昔のコミケ、ドイツのコロナ事情、オカルト
 
