--- a/_posts/2020-09-20-2.md
+++ b/_posts/2020-09-20-2.md
@@ -7,11 +7,12 @@ audio_file_size: 142MB
 date: 2020-9-20 00:00:00 +0900
 description: うっしーさんとアニメシステム、最近の気になるニュース、おすすめの漫画・ゲームなどについて話しました。
 duration: "00:00"
+audio_url: Ep--2-Celebrating-100TB-of-Animation-Data-ejsjfj
 layout: article
 title: Ep. 2 Celebrating 100TB of Animation Data
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 0:00 ポッドキャストについて
 
