--- a/_posts/2020-10-11-3.md
+++ b/_posts/2020-10-11-3.md
@@ -7,11 +7,12 @@ audio_file_size: 0
 date: 2020-10-11 00:00:00 +0900
 description: 本名さんと土地、最近の飲み会事情、体重・食事管理、欅坂46、最近の気になるニュースなどについて話しました。
 duration: "00:00"
+audio_url: Ep--3-10-glasses-of-beer-are-not-negligible-calories-ekscvu
 layout: article
 title: Ep. 3 10 glasses of beer are not negligible calories
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 0:00 ポッドキャストについて
 
