--- a/_posts/2020-11-08-6.md
+++ b/_posts/2020-11-08-6.md
@@ -7,11 +7,12 @@ audio_file_size: 126.5MB
 date: 2020-11-8 00:00:00 +1000
 description: まちゅんさんと多発性硬化症（MS）、芋弁、お互いの疑問、脱炭素、座間事件、宅麺などについて話しました。
 duration: "00:00"
+audio_url: Ep--6-Without-Knowing-Anything-em61t0
 layout: article
 title: Ep. 6 Without Knowing Anything
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 3:00 まちゅんさんとは
 
