--- a/_posts/2020-11-16-8.md
+++ b/_posts/2020-11-16-8.md
@@ -7,11 +7,12 @@ audio_file_size: 151.5MB
 date: 2020-11-16 00:00:00 +0900
 description: 虚無子さんと コスメ沼、カスタマーサポート、ダイエット、音楽などについて話しました。
 duration: "00:00"
+audio_url: Ep--8-Blue-Sound-emgq2n
 layout: article
 title: Ep. 8 Blue Sound
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 14:20 虚無子さんとは
 
