--- a/_posts/2020-12-07-9.md
+++ b/_posts/2020-12-07-9.md
@@ -7,11 +7,12 @@ audio_file_size: 153MB
 date: 2020-12-7 00:00:00 +0900
 description: アゾソンさんとドキュメント整備、デッサン教室、オススメのゲーム、漫画などについて話しました。
 duration: "00:00"
+audio_url: Ep--9-God-Illustrator-enee11
 layout: article
 title: Ep. 9 God Illustrator
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 1:24 アゾソンさんとは
 
