--- a/_posts/2021-02-23-12.md
+++ b/_posts/2021-02-23-12.md
@@ -8,11 +8,12 @@ audio_file_size: 80.8MB
 date: 2021-2-23 00:00:00 +0900
 description: イモ弁さん、まちゅんさんと弁護士の就職事情、中学校での講演、リスナーから届いたお便りなどについて話しました。
 duration: "00:00"
+audio_url: Ep--12-In-defence-of-Nezuko-eqsleg
 layout: article
 title: Ep. 12 In defence of Nezuko
 ---
 
-## ShowNote
+## ShowNotes
 
 ### 6:12 自己紹介、司法修習生、弁護士の就職事情、中学校での講演
 
