--- a/_posts/2021-03-27-14.md
+++ b/_posts/2021-03-27-14.md
@@ -42,7 +42,7 @@ title: Ep. 14 Lemon Taste
 * [Valheim](https://store.steampowered.com/app/892970/Valheim/)
 * [ゆるキャン△ SEASON 2](https://yurucamp.jp/second/)
 * [おしえて北斎！](https://www.hokusai-anime.jp/)
-* [シン・エヴァンゲリオン劇場版:||](https://www.evangelion.co.jp/final.html)
+* [シン・エヴァンゲリオン劇場版完結編](https://www.evangelion.co.jp/final.html)
 * [乙嫁語り13巻](https://amzn.to/31ePKdl)
 * [エマ](https://amzn.to/3ckYNjn)
 * [逆噴射小説大賞](https://note.com/dontbetruenote/n/n82ea7db23446)：[ﾄﾞﾝﾄ](https://twitter.com/dontbetrue)さん
